# CS488Project

./: CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  Collision.cpp  Collision.h  Cylinder.cpp  Cylinder.h  Flashlight.cpp  Flashlight.h  GridMesh.cpp  GridMesh.h  Leaves.cpp  Leaves.h  Main.cpp  Material.h  Model.cpp  Model.h  PerlinNoise.cpp  README.md  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  Skybox.cpp  Skybox.h  SmokeSystem.cpp  SmokeSystem.h  Sound.cpp  Sound.h  Sun.cpp  Sun.h  TODO.txt  Texture.cpp  Texture.h  Tombstone.cpp  Tombstone.h  Tree.cpp  Tree.h  Types.h  (+4 more)
models/: goldring.mtl  house.mtl  rock.mtl  rubikscube.mtl  simpletree.mtl  texturedCube.mtl
shaders/: 2dAlphaTexture.fs  2dColour.fs  2dColour.vs  2dColourTexture.fs  alphatexture.fs  alphatexture.vs  blur.fs  bumpmap.fs  bumpmap.vs  constantKd.fs  constantKd.vs  dofBlur.fs  dofBlur2.fs  frag.fs  frag2.fs  gaussianBlur.fs  hmap.fs  hmap.vs  pick.fs  shadow.fs  shadow.vs  skybox.fs  skybox.vs  smoke.fs  smoke.vs  textureKd.fs  textureKd.vs  vert.vs  vert2.vs  water.fs  water.vs
textures/: 123456.dds  cube.dds  ht.dds  leaves.dds  nightPZ.dds  noise  skyboxNX.dds  skyboxNY.dds  skyboxNZ.dds  skyboxPX.dds  skyboxPY.dds  skyboxPZ.dds
